# payload-neo

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  .release-it.json  .swcrc  .yarnrc.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.local  LICENSE  README.md  THIRD-PARTY-LICENSE  changelog.md  crowdin.yml  deno.json  docker-compose.production.yml  docker-compose.yml  drizzle.config.ts  example-config.ts  fly.toml  index.html  litefs.yml  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
buildscripts/: copy-changelog.ts  copy-html.ts  copy-static-assets.ts  copy-website.ts
languages/: de-DE.json  en-US.json  es-ES.json  fi-FI.json  fr-FR.json  pl-PL.json  ru-RU.json
languages/de-DE/: globals.json  preconditions.json  system.json
languages/en-US/: globals.json
languages/es-ES/: system.json
languages/src/: client.json
migrations/: 1624220016247-remove-deprecated-users-fields.js  1624221433021-remove-deprecated-servers-fields.js  1625015164470-rename-steamid-field.js  1635020806960-remove-per-channel-restrictions.js  1637367316555-remove-webhooks-from-user.js  1647974041033-remove-refresh-tokens.js  20230218215318_add_tables.sql
nginx/: nginx.conf
prisma/: schema.prisma  seed.ts
public/js/: docs.js  particles.json
public/stylesheets/: styles.css
scripts/: clean.mjs  copy-i18n.mjs  healthcheck.mjs
src/: client.ts  config.ts  drizzle.config.ts  index.ts  main.rs
src/api/: API.md  README.md  (+8 more)
static/: docs.html  index.html
(+582 files in other folders)
