[package]
name = "payload"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
poise = "0.5.2"
reqwest = "0.11.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["local-time", "ansi"] }
